--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
         </div>
         
         <p style="margin-top: 32px; opacity: 0.9; font-size: 16px;">
-          ⭐⭐⭐⭐⭐ Install and begin testing the beta!
+          ⭐⭐ Install and begin testing the beta!
         </p>
       </div>
     </div>
