--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
         <p>If you have any questions about this privacy policy or Populate Snippets, need support, or want to report an issue, please contact us:</p>
         <p style="margin-top: 16px; padding: 16px; background: var(--bg-alt); border-radius: 12px; border: 2px solid var(--purple-light);">
           <strong style="color: var(--purple);">📧 Support Email:</strong><br>
-          <a href="mailto:support@populatesnippets.com" style="color: var(--purple); font-weight: 600; text-decoration: none; font-size: 18px;">support@populatesnippets.com</a>
+          <a href="mailto:raman.prasad@octoenergy.com" style="color: var(--purple); font-weight: 600; text-decoration: none; font-size: 18px;">support@populatesnippets.com</a>
         </p>
         <p style="margin-top: 12px; font-size: 14px; color: var(--text-light);">
           We typically respond within 24-48 hours. For urgent issues, please include "URGENT" in your subject line.
