--- a/index.html
+++ b/index.html
@@ -508,8 +508,8 @@
           
           <div style="background: linear-gradient(135deg, #6B46C1, #EC4899); padding: 30px; border-radius: 16px; margin-bottom: 24px;">
             <p style="color: white; font-size: 16px; font-weight: 600; margin-bottom: 12px;">📧 Email Support</p>
-            <a href="mailto:support@populatesnippets.com" style="color: white; font-size: 28px; font-weight: 800; text-decoration: none; display: block; letter-spacing: 0.5px;">
-              support@populatesnippets.com
+            <a href="mailto:raman.prasad@octoenergy.com" style="color: white; font-size: 28px; font-weight: 800; text-decoration: none; display: block; letter-spacing: 0.5px;">
+              raman.prasad@octoenergy.com
             </a>
           </div>
           
@@ -578,7 +578,7 @@
         <p>If you have any questions about this privacy policy or Populate Snippets, need support, or want to report an issue, please contact us:</p>
         <p style="margin-top: 16px; padding: 16px; background: var(--bg-alt); border-radius: 12px; border: 2px solid var(--purple-light);">
           <strong style="color: var(--purple);">📧 Support Email:</strong><br>
-          <a href="mailto:support@populatesnippets.com" style="color: var(--purple); font-weight: 600; text-decoration: none; font-size: 18px;">support@populatesnippets.com</a>
+          <a href="mailto:raman.prasad@octoenergy.com" style="color: var(--purple); font-weight: 600; text-decoration: none; font-size: 18px;">raman.prasad@octoenergy.com</a>
         </p>
         <p style="margin-top: 12px; font-size: 14px; color: var(--text-light);">
           We typically respond within 24-48 hours. For urgent issues, please include "URGENT" in your subject line.
