--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         </div>
         
         <p style="margin-top: 32px; opacity: 0.9; font-size: 16px;">
-          ⭐⭐⭐⭐⭐ Join thousands testing the beta
+          ⭐⭐⭐⭐⭐ Join testing the beta
         </p>
       </div>
     </div>
