--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
 
       <div class="feature-showcase">
         <div class="feature-card-modern">
-          <img src="https://i.postimg.cc/X7qhZQCt/1280x12.png" alt="Smart Variables" class="feature-img">
+          <img src="https://i.postimg.cc/c4CjKXnz/1280x123.png" alt="Smart Variables" class="feature-img">
           <div class="feature-content">
             <h3><span>🎯</span> Smart Variables</h3>
             <p>Use dynamic variables like {{name}}, {{email}}, and {{date}} to create personalized templates that adapt instantly.</p>
@@ -775,7 +775,7 @@
         </div>
 
         <div class="feature-card-modern">
-          <img src="https://i.postimg.cc/c4CjKXnz/1280x123.png" alt="Slack Integration" class="feature-img">
+          <img src="https://i.postimg.cc/3JN6ynvV/1280x1234.png" alt="Slack Integration" class="feature-img">
           <div class="feature-content">
             <h3><span>💬</span> Slack Integration</h3>
             <p>Quick links to your Slack channels and workflows. Perfect for team collaboration and instant communication.</p>
@@ -783,7 +783,7 @@
         </div>
 
         <div class="feature-card-modern">
-          <img src="https://i.postimg.cc/3JN6ynvV/1280x1234.png" alt="Organized System" class="feature-img">
+          <img src="https://i.postimg.cc/X7qhZQCt/1280x12.png"" alt="Organized System" class="feature-img">
           <div class="feature-content">
             <h3><span>📁</span> Stay Organized</h3>
             <p>Keep all your snippets organized by folders, teams, or projects. Find what you need in seconds.</p>
@@ -828,7 +828,7 @@
         
         <div class="email-box">
           <p>📧 Email Support</p>
-          <a href="mailto:support@populatesnippets.com">support@populatesnippets.com</a>
+          <a href="mailto:raman.prasad@octoenergy.com">raman.prasad@octoenergy.com</a>
         </div>
         
         <div class="support-grid">
