--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@
         <a href="#pricing">Pricing</a>
         <a href="#privacy">Privacy</a>
         <a href="#faq">FAQ</a>
-        <a href="https://chrome.google.com/webstore" class="install-btn">Install Extension</a>
+        <a href="https://chromewebstore.google.com/detail/populate-snippets/mkofijdjpbnhkkhfgaakcilndooacdaa?authuser=0&hl=en-GB" class="install-btn">Install Extension</a>
       </div>
     </div>
   </nav>
