--- a/index.html
+++ b/index.html
@@ -1878,7 +1878,7 @@
   <section class="cta-section">
     <div class="cta-container">
       <h2>Ready to save hours every week?</h2>
-      <p>Join thousands of professionals who use Populate Snippets to work smarter, not harder.</p>
+      <p>Join professionals who use Populate Snippets to work smarter, not harder.</p>
       <a href="https://chrome.google.com/webstore" class="btn-primary">
         🚀 Install Free Extension
       </a>
